# DFAv3

./: CMakeLists.txt  DFA.cpp  DFA.h  DFA_product_test.cpp  ENFA.cpp  ENFA.h  RE.cpp  RE.h  RE_ENFA_test.cpp  State.cpp  State.h  TFA_test.cpp  TransitionDFA.cpp  TransitionDFA.h  TransitionNFA.cpp  TransitionNFA.h
jsonFiles/: DFA2_product.json  DFA_product.json  DFA_product3.json  DFA_product4.json  ENFA.json  NFA.json  NFA2.json  TFA.json  TFA2.json  dfaTest.json
